k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httprelay
  labels:
    app: httprelay
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httprelay
  template:
    metadata:
      labels:
        app: httprelay
    spec:
      containers:
      - name: httprelay
        image: registry.gitlab.com/jonas.jasas/httprelay
        imagePullPolicy: 'Always'
        ports:
        - name: http
          containerPort: 8800

        livenessProbe:
          httpGet:
            path: /health
            port: http

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: httprelay
  name: httprelay
spec:
  selector:
    app: httprelay
  externalTrafficPolicy: Local
  type: NodePort
  ports:
  - name: http
    targetPort: http
    port: 30880
